fix text-align selectors

--- a/.dev/assets/shared/css/blocks/verse/_style.scss
+++ b/.dev/assets/shared/css/blocks/verse/_style.scss
@@ -4,4 +4,8 @@ pre {
 	line-height: 1.5;
 	overflow: auto;
 	padding: 3rem 2rem;
+
+	&:not([class*="has-text-align-"]) {
+		text-align: left;
+	}
 }
